# cc.fyi.common

./: .gitignore  CMakeLists.txt  README.md  conanfile.py  conanfile.txt
include/common/: CMakeLists.txt  io.hpp  safe_ptr_cast.hpp  util.hpp
src/main/: CMakeLists.txt  io.cpp
src/test/: CMakeLists.txt  io.cpp  safe_ptr_cast.cpp  util.cpp
